--- a/htm/BlockStrike.htm
+++ b/htm/BlockStrike.htm
@@ -4,6 +4,7 @@
 <head>
 <title>Mist Project.win</title>
 <link rel="stylesheet" type="text/css" href="../css/style.css" />
+<link rel="shortcut icon" href="../img/unnamed.png"/>
 </head>
 <body>
 
@@ -15,7 +16,7 @@
 </table>
 
 <!--body-->
-<table width="91%" height="100%" align="center" cellspacing="0">
+<table width="80%" height="100%" align="center" cellspacing="0">
 <tr>
 <td>
 <h1>Block Strike</h1>
@@ -50,14 +51,14 @@ CFG System:
 <td>
 <h1>How To Download</h1>
 <h2><a href="https://youtu.be/-c8joSb4nYU">Установка читов без root прав на Блок Страйк 7.3.6 | Как установить чит на Блок Страйк без рут прав</a></h2>
-<p><img src="../images/howtodownload.jpg" width="525" height="325"/></p>
+<p class="kanal"><a href="https://youtu.be/-c8joSb4nYU"><img src="../images/howtodownload.jpg" width="525" height="325"/></p>
 </td>
 </tr>
 <tr>
 <td>
 <h1>Gameplay #1</h1>
 <h2><a href="https://youtu.be/jFOhHG48_iQ">Читы на Блок Страйк 7.3.6 | Лучший чит на Block Strike 7.3.6 | Читы на Block Strike 7.3.6</a></h2>
-<p><img src="../images/gameplay1.jpg" width="525" height="325"/></p>
+<p class="kanal"><a href="https://youtu.be/jFOhHG48_iQ"><img src="../images/gameplay1.jpg" width="525" height="325"/></p>
 </td>
 </tr>
 </table>
@@ -104,8 +105,8 @@ CFG System:
 <td class="menu">
 <a href="Home.htm"><p class="main">Main</p></a>
 <a href="BlockStrike.htm"><p class="activity">Block Strike</p></a>
-<!--<a href="Video.htm"><p class="main">Видео</p></a>
-<a href="Scripts.htm"><p class="main">Скрипты</p></a>
+<a href="Video.htm"><p class="main">Видео</p></a>
+<!--<a href="Scripts.htm"><p class="main">Скрипты</p></a>
 <a href="Virtual.htm"><p class="main">Виртуалки</p></a>
 <a href="Apps.htm"><p class="main">Приложения</p></a>
 <a href="Info.htm"><p class="main">О сайте</p></a>-->
