--- a/htm/Home.htm
+++ b/htm/Home.htm
@@ -4,6 +4,7 @@
 <head>
 <title>Mist Project.win</title>
 <link rel="stylesheet" type="text/css" href="../css/style.css" />
+<link rel="shortcut icon" href="../img/unnamed.png"/>
 </head>
 <body>
 
@@ -15,7 +16,7 @@
 </table>
 
 <!--body-->
-<table width="91%" height="100%" align="center" cellspacing="0">
+<table width="80%" height="100%" align="center" cellspacing="0">
 <tr>
 <td>
 <h1>Foreword</h1>
@@ -30,6 +31,7 @@ Frequent download problems, lack of user experience, too many FAQs, too much tim
 <p class="hh1">
 Welcome to Mist Project.win!
 </p>
+<p class="kanal"><img src="../img/unnamed.png" width="500" height="500" p>
 </embed>
 </object>
 </td>
@@ -40,8 +42,8 @@ Welcome to Mist Project.win!
 <td class="menu">
 <a href="Home.htm"><p class="activity">Main</p></a>
 <a href="BlockStrike.htm"><p class="main">Block Strike</p></a>
-<!--<a href="Video.htm"><p class="main">Видео</p></a>
-<a href="Scripts.htm"><p class="main">Скрипты</p></a>
+<a href="Video.htm"><p class="main">Видео</p></a>
+<!--<a href="Scripts.htm"><p class="main">Скрипты</p></a>
 <a href="Virtual.htm"><p class="main">Виртуалки</p></a>
 <a href="Apps.htm"><p class="main">Приложения</p></a>
 <a href="Info.htm"><p class="main">О сайте</p></a>-->
