--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,7 @@
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <meta name="keywords" content="Читы на блок страйк,Читы на бс,Читы на block strike,Взлом бс,взлом Блок Страйк,взлом block strike,обход анти Чита в бс,Лучший чит на блок страйк,Чит без рут прав на блок страйк,Читы на block strike,Читы на bs,Взлом бс,взлом Блок Страйк,взлом bs,взлом block strike,обход анти Чита в бс,Обход на блок страйк,обход на блок страйк,обход на block strike,game guardian который не детектит блок страйк,бесплатный чит на блок страйк,cheat block strike,cheat block strike no root,download block strike hack,block strike hack" />
 <meta name="description" content="Mist Project.win" />
+<link rel="shortcut icon" href="img/unnamed.png"/>
 </head>
 <body>
 <table width="full" height="60%" align="center" cellpadding="0" cellspacing="0">
