--- a/htm/Home.htm
+++ b/htm/Home.htm
@@ -42,7 +42,7 @@ Welcome to Mist Project.win!
 <td class="menu">
 <a href="Home.htm"><p class="activity">Main</p></a>
 <a href="BlockStrike.htm"><p class="main">Block Strike</p></a>
-<a href="Video.htm"><p class="main">Видео</p></a>
+<a href="Video.htm"><p class="main">Videos</p></a>
 <!--<a href="Scripts.htm"><p class="main">Скрипты</p></a>
 <a href="Virtual.htm"><p class="main">Виртуалки</p></a>
 <a href="Apps.htm"><p class="main">Приложения</p></a>
@@ -53,7 +53,7 @@ Welcome to Mist Project.win!
 
 <table class="endTable" width="91%" height="5%" align="center" cellpadding="0" cellspacing="0">
 <tr>
-<td class="visend"><a class="linkds" href="https://t.me/FoxyProduction"> 0xFoxy Production [Support] </a> || <a class="linkds" href="https://t.me/JUSTIBEST"> JUSTI [Support]</a></td>
+<td class="visend"><a class="linkds" href="https://t.me/FoxyProduction" target="_blank"> 0xFoxy Production [Support] </a> || <a class="linkds" href="https://t.me/JUSTIBEST" target="_blank"> JUSTI [Support]</a></td>
 </tr>
 </table>
 </body>
