--- a/htm/Video.htm
+++ b/htm/Video.htm
@@ -35,7 +35,9 @@ Here will be your videos related to the project, for example: review, gameplay a
 <table width="91%" height="1400px" align="center" cellspacing="0">
 <tr>
 <td>
-<iframe width="1000" height="600" src="https://youtu.be/d9jUceQ1Pno" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h2><a href="https://youtu.be/d9jUceQ1Pno" target="_blank">(Root/no root) Block strike 7.4.7 читы / Hack Block strike 7.4.7 injector menu. Vmos pro/Magisk</a></h2>
+<h3>User5577 [The disconnect]</h3>
+<iframe width="700" height="400" src="https://www.youtube.com/embed/d9jUceQ1Pno" target="_blank" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </td>
 </tr>
 </table>
@@ -43,7 +45,7 @@ Here will be your videos related to the project, for example: review, gameplay a
 <td class="menu">
 <a href="Home.htm"><p class="main">Main</p></a>
 <a href="BlockStrike.htm"><p class="main">Block Strike</p></a>
-<a href="Video.htm"><p class="activity">Video</p></a>
+<a href="Video.htm"><p class="activity">Videos</p></a>
 <!--<a href="Scripts.htm"><p class="main">Скрипты</p></a>
 <a href="Virtual.htm"><p class="main">Виртуалки</p></a>
 <a href="Apps.htm"><p class="main">Приложения</p></a>
@@ -55,7 +57,7 @@ Here will be your videos related to the project, for example: review, gameplay a
 <!--end-->
 <table class="endTable" width="91%" height="5%" align="center" cellpadding="0" cellspacing="0">
 <tr>
-<td class="visend"><a class="linkds" href="https://t.me/FoxyProduction"> 0xFoxy Production [Support] </a> || <a class="linkds" href="https://t.me/JUSTIBEST"> JUSTI [Support]</a></td>
+<td class="visend"><a class="linkds" href="https://t.me/FoxyProduction" target="_blank"> 0xFoxy Production [Support] </a> || <a class="linkds" href="https://t.me/JUSTIBEST" target="_blank"> JUSTI [Support]</a></td>
 </tr>
 </table>
 </body>
