--- a/htm/BlockStrike.htm
+++ b/htm/BlockStrike.htm
@@ -50,15 +50,15 @@ CFG System:
 <tr>
 <td>
 <h1>How To Download</h1>
-<h2><a href="https://youtu.be/-c8joSb4nYU">Установка читов без root прав на Блок Страйк 7.3.6 | Как установить чит на Блок Страйк без рут прав</a></h2>
-<p class="kanal"><a href="https://youtu.be/-c8joSb4nYU"><img src="../images/howtodownload.jpg" width="525" height="325"/></p>
+<h2><a href="https://youtu.be/-c8joSb4nYU" target="_blank">Установка читов без root прав на Блок Страйк 7.3.6 | Как установить чит на Блок Страйк без рут прав</a></h2>
+<p class="kanal"><a href="https://youtu.be/-c8joSb4nYU" target="_blank"><img src="../images/howtodownload.jpg" width="525" height="325"/></p>
 </td>
 </tr>
 <tr>
 <td>
 <h1>Gameplay #1</h1>
-<h2><a href="https://youtu.be/jFOhHG48_iQ">Читы на Блок Страйк 7.3.6 | Лучший чит на Block Strike 7.3.6 | Читы на Block Strike 7.3.6</a></h2>
-<p class="kanal"><a href="https://youtu.be/jFOhHG48_iQ"><img src="../images/gameplay1.jpg" width="525" height="325"/></p>
+<h2><a href="https://youtu.be/jFOhHG48_iQ" target="_blank">Читы на Блок Страйк 7.3.6 | Лучший чит на Block Strike 7.3.6 | Читы на Block Strike 7.3.6</a></h2>
+<p class="kanal"><a href="https://youtu.be/jFOhHG48_iQ" target="_blank"><img src="../images/gameplay1.jpg" width="525" height="325"/></p>
 </td>
 </tr>
 </table>
@@ -93,10 +93,10 @@ CFG System:
 <table class="infofordownload" width="full%" height="full" align="center" cellpadding="0" cellspacing="0">
 <tr>
 <td>
-<h2 class="linkhome"><a href="https://link">(1) Download This Cheat [Administation Script]</a></h2>
-<h2 class="linkhome"><a href="https://link">(2) Download This Cheat [VMOS Pro]</a></h2>
-<h2 class="linkhome"><a href="https://link">(3) Download This Cheat [Bypass VMOS Pro]</a></h2>
-<h2 class="linkhome"><a href="https://link">(4) Download This Cheat [Key for Script]</a></h2>
+<h2 class="linkhome"><a href="https://link" target="_blank">(1) Download This Cheat [Administation Script]</a></h2>
+<h2 class="linkhome"><a href="https://link" target="_blank">(2) Download This Cheat [VMOS Pro]</a></h2>
+<h2 class="linkhome"><a href="https://link" target="_blank">(3) Download This Cheat [Bypass VMOS Pro]</a></h2>
+<h2 class="linkhome"><a href="https://link" target="_blank">(4) Download This Cheat [Key for Script]</a></h2>
 </td>
 </tr>
 </table>
@@ -105,7 +105,7 @@ CFG System:
 <td class="menu">
 <a href="Home.htm"><p class="main">Main</p></a>
 <a href="BlockStrike.htm"><p class="activity">Block Strike</p></a>
-<a href="Video.htm"><p class="main">Видео</p></a>
+<a href="Video.htm"><p class="main">Videos</p></a>
 <!--<a href="Scripts.htm"><p class="main">Скрипты</p></a>
 <a href="Virtual.htm"><p class="main">Виртуалки</p></a>
 <a href="Apps.htm"><p class="main">Приложения</p></a>
@@ -117,7 +117,7 @@ CFG System:
 <!--end-->
 <table class="endTable" width="91%" height="5%" align="center" cellpadding="0" cellspacing="0">
 <tr>
-<td class="visend"><a class="linkds" href="https://t.me/FoxyProduction"> 0xFoxy Production [Support] </a> || <a class="linkds" href="https://t.me/JUSTIBEST"> JUSTI [Support]</a></td>
+<td class="visend"><a class="linkds" href="https://t.me/FoxyProduction" target="_blank"> 0xFoxy Production [Support] </a> || <a class="linkds" href="https://t.me/JUSTIBEST" target="_blank"> JUSTI [Support]</a></td>
 </tr>
 </table>
 </body>
