--- a/htm/ChickenGun.htm
+++ b/htm/ChickenGun.htm
@@ -112,6 +112,7 @@ Funcional:
 <td class="menu">
 <a href="Home.htm"><p class="main">Main</p></a>
 <a href="BlockStrike.htm"><p class="main">Block Strike</p></a>
+<a href="ForwardAssault.htm"><p class="main">FWD Assault</p></a>
 <a href="Standoff.htm"><p class="main">Standoff 2</p></a>
 <a href="ChickenGun.htm"><p class="activity">Chicken Gun</p></a>
 <a href="HideOnline.htm"><p class="main">Hide Online</p></a>
