--- a/htm/ForwardAssault.htm
+++ b/htm/ForwardAssault.htm
@@ -19,12 +19,12 @@
 <table width="80%" height="100%" align="center" cellspacing="0">
 <tr>
 <td>
-<h1>Block Strike</h1>
+<h1>Forward Assault</h1>
 <!--&&&&&&&&&&&&&&&&-->
 <table class="VnytTable" width="85%" height="295px" align="center" cellpadding="0" cellspacing="0">
 <tr>
 <td>
-<h2>🢥 Best Free Software [INJECTOR] 🢦</h2>
+<h2>🢥 Best Free Software [MOD MENU] 🢦</h2>
 <p class="hh3">
 ⭐Functions in Software⭐
 </p>
@@ -34,78 +34,131 @@
 ✔
 ✖
 -->
-<p class="status-plus">✅ Status: Software Works in Block Strike on version 7.5.0</p>
+<p class="status-plus">✅ Status: Software Works in Forward Assault on version 1.2031</p>
 <p class="text">
-↯ [For Users No Root] - Use Virtual VMOS PRO ↯
-</p>
-<p class="text">
-↯ [For Users Root] - Use Magisk, SU and etk. ↯
-</p>
-<p class="text">
-⇾ All Functions Menu ⇽
+⇾ Main Menu ⇽
 </p>
 <p class="finctions-menu">
-⮑ Legit Functions:
-</p>
-<p class="finctions">
-✔ Off Detected ({Bypass Anti-Cheat})
-</p>
-<p class="finctions">
-✔ AIM Size
-</p>
-<p class="finctions">
-✔ 15k$ (Towers, Bomb)
+⮑ Controller Functions:
 </p>
 <p class="finctions">
 ✔ No Recoil
 </p>
 <p class="finctions">
-✔ No Scatter ({No Spread})
+✔ No Spread (No Scatter)
 </p>
 <p class="finctions">
-✔ FOV Weapons
+✔ No Camera Shake
 </p>
 <p class="finctions">
-✔ Wallhack (Beta)
+✔ No Shake Damage
+</p>
+<p class="finctions">
+✔ No Flinch
+</p>
+<p class="finctions">
+✔ No Flash
+</p>
+<p class="finctions">
+✔ No Smoke
+</p>
+<p class="finctions">
+✔ No Suicide
+</p>
+<p class="finctions">
+✔ No Hit Col (Landing Without Damage)
 </p>
 <p class="finctions-menu">
-⮑ Rage Functions: 
+⮑ Support Aim Functions: 
 </p>
 <p class="finctions">
-✔ God Mode [Damage]
+✔ Hit Boxes Aim (Add Players HitBoxes Head Size)
 </p>
 <p class="finctions">
-✔ God Mode [Death Run]
+✔ Trigger Bot (Trigger Auto Shoot on Players)
+</p>
+<p class="finctions-menu">
+⮑ Select Weapon Functions: 
 </p>
 <p class="finctions">
-✔ God Mode [Health]
+✔ Set Weapon (Select Weapon)
 </p>
 <p class="finctions">
-✔ Gravity
+✔ Weapon ID
+</p>
+<p class="finctions-menu">
+⮑ Select Gloves Functions: 
 </p>
 <p class="finctions">
-✔ Infinity Ammo
+✔ Gloves ID
+</p>
+<p class="text">
+⇾ Fantastic Menu ⇽
+</p>
+<p class="finctions-menu">
+⮑ Shooting Functions: 
 </p>
 <p class="finctions">
-✔ Fire Rate (Beta)
+✔ Fire Rate
 </p>
 <p class="finctions">
-✔ Team Kill (Beta)
+✔ Unlimited Ammo [Kick]
 </p>
 <p class="finctions">
-✔ Climb Walls
+✔ Unlimited Ammo [Kick && Ban] (Infinity Ammo)
 </p>
 <p class="finctions">
-✔ Mega Damage
+✔ Ammo Type [Kick && Ban] (Shooting Grenades or Bullets)
+</p>
+<p class="finctions-menu">
+⮑ Select Custom Team Functions: 
 </p>
 <p class="finctions">
-✔ Dead (Ground)
+✔ Set Team (Select Counter-Terrorist or Terrorist Team)
 </p>
 <p class="finctions">
-✔ Lite Speed
+✔ Fast Change Team (Auto Fast Change my Team CT,T,S)
+</p>
+<p class="finctions-menu">
+⮑ Bomb Functions: 
 </p>
 <p class="finctions">
-✔ Hard Speed
+✔ Plant Anywhere
+</p>
+<p class="finctions">
+✔ Fast Planting [Kick is Possible For Abuse]
+</p>
+<p class="finctions">
+✖ Fast Detonate [Don't Work]
+</p>
+<p class="finctions">
+✔ Defuse Anywhere
+</p>
+<p class="finctions">
+✔ Fast Defusing [Kick is Possible For Abuse]
+</p>
+<p class="finctions-menu">
+⮑ Movement Functions:
+</p>
+<p class="finctions">
+✔ No Move [Kick is Possible For Abuse]
+<p class="finctions">
+✔ Don't Return to Spawn
+</p>
+<p class="finctions">
+✔ Legit Move Speed [Kick is Possible For Abuse]
+</p>
+<p class="finctions">
+✔ Move Speed [Kick]
+</p>
+<p class="finctions">
+✔ Fly Developer
+</p>
+<p class="finctions">
+✔ Auto Jump (Always Jump)
+</p>
+<p class="finctions">
+✔ Auto Strafe (Slight Jump Turn)
 </p>
 <p class="text">
 ⇾ Weapons Menu ⇽
@@ -307,18 +360,18 @@
 </p>
 </td>
 </tr>
-<!--<tr>
+<tr>
 <td>
 <h1>How To Download</h1>
 <h2><a href="https://youtu.be/-c8joSb4nYU" target="_blank">Установка читов без root прав на Блок Страйк 7.3.6 | Как установить чит на Блок Страйк без рут прав</a></h2>
 <p class="kanal"><a href="https://youtu.be/-c8joSb4nYU" target="_blank"><img src="../images/howtodownload.jpg" width="525" height="325"/></p>
 </td>
-</tr>-->
+</tr>
 <tr>
 <td>
-<h1>Gameplay With Software</h1>
-<h2><a href="https://youtu.be/uL7ymAJBSHA" target="_blank">(Root & Android 9+) Block strike 7.5.0 читы / Hack Block strike </a></h2>
-<p class="kanal"><a href="https://youtu.be/jFOhHG48_iQ" target="_blank"><img src="../img/gameplayUser5577.jpg" width="525" height="325"/></p>
+<h1>Gameplay #1</h1>
+<h2><a href="https://youtu.be/jFOhHG48_iQ" target="_blank">Читы на Блок Страйк 7.3.6 | Лучший чит на Block Strike 7.3.6 | Читы на Block Strike 7.3.6</a></h2>
+<p class="kanal"><a href="https://youtu.be/jFOhHG48_iQ" target="_blank"><img src="../images/gameplay1.jpg" width="525" height="325"/></p>
 </td>
 </tr>
 </table>
@@ -353,8 +406,10 @@
 <table class="infofordownload" width="full%" height="full" align="center" cellpadding="0" cellspacing="0">
 <tr>
 <td>
-<h2 class="linkhome"><a href="https://t.me/linkbypassblockcapau" target="_blank">(1) Download This Cheat [Bypass VMOS PRO.lua && Game Guardian]</a></h2>
-<h2 class="linkhome"><a href="https://t.me/PMT57" target="_blank">(3) Download This Cheat [Injector]</a></h2>
+<h2 class="linkhome"><a href="https://link" target="_blank">(1) Download This Cheat [Administation Script]</a></h2>
+<h2 class="linkhome"><a href="https://link" target="_blank">(2) Download This Cheat [VMOS Pro]</a></h2>
+<h2 class="linkhome"><a href="https://link" target="_blank">(3) Download This Cheat [Bypass VMOS Pro]</a></h2>
+<h2 class="linkhome"><a href="https://link" target="_blank">(4) Download This Cheat [Key for Script]</a></h2>
 </td>
 </tr>
 </table>
@@ -362,8 +417,8 @@
 </td>
 <td class="menu">
 <a href="Home.htm"><p class="main">Main</p></a>
-<a href="BlockStrike.htm"><p class="activity">Block Strike</p></a>
-<a href="ForwardAssault.htm"><p class="main">FWD Assault</p></a>
+<a href="BlockStrike.htm"><p class="main">Block Strike</p></a>
+<a href="ForwardAssault.htm"><p class="activity">FWD Assault</p></a>
 <a href="Standoff.htm"><p class="main">Standoff 2</p></a>
 <a href="ChickenGun.htm"><p class="main">Chicken Gun</p></a>
 <a href="HideOnline.htm"><p class="main">Hide Online</p></a>
