--- a/htm/Home.htm
+++ b/htm/Home.htm
@@ -42,6 +42,7 @@ Welcome to Mist Project.win!
 <td class="menu">
 <a href="Home.htm"><p class="activity">Main</p></a>
 <a href="BlockStrike.htm"><p class="main">Block Strike</p></a>
+<a href="ForwardAssault.htm"><p class="main">FWD Assault</p></a>
 <a href="Standoff.htm"><p class="main">Standoff 2</p></a>
 <a href="ChickenGun.htm"><p class="main">Chicken Gun</p></a>
 <a href="HideOnline.htm"><p class="main">Hide Online</p></a>
