--- a/index.htm
+++ b/index.htm
@@ -38,7 +38,10 @@
 </td>
 </tr>
 <tr>
-<td class="visend"><a class="linkds" href="https://t.me/FoxyProduction" target="_blank"> 0xFoxy [Coder, Support] </a> || <a class="linkds" href="https://t.me/JUSTIBEST" target="_blank"> JUSTI [Coder, Support]</a> || <a class="linkds" href="https://t.me/PMT57" target="_blank"> User5577 [Coder]</a></td>
+<td class="visend"><a class="linkds" href="https://t.me/Joberman4ik" target="_blank"> Joberman4ik [Owner] </a> || <a class="linkds" href="https://t.me/JUSTIBEST" target="_blank"> JUSTI [Coder, Support]</a> || <a class="linkds" href="https://t.me/PMT57" target="_blank"> 0xFoxy [Coder, Support]</a></td>
+</tr>
+<tr>
+<td class="visend"><a class="linkds" href="https://t.me/PMT57" target="_blank"> User5577 [Coder] </a> || <a class="linkds" href="https://t.me/PMT57" target="_blank"> Hellboy [Coder] </a> || <a class="linkds" href="https://t.me/sdnshina_real" target="_blank"> SDNSHINA [Coder]</a></td>
 </tr>
 </table>
 <!--окончание таба-->
