--- a/index.htm
+++ b/index.htm
@@ -15,10 +15,36 @@
 <table width="100%" height="100px" align="center" cellpadding="0" cellspacing="0">
 <tr>
 <td class="helloworld">
-<p class="hh1">Soon... USER5577 is GAY LGBT</p>
+<p class="hh1">Welcome to Mist Project.win</p>
 </td>
 </tr>
 </table>
+<table width="200px" height="150px" align="center" cellpadding="0" cellspacing="0">
+<tr>
+<td class="hh2"><a class="hh3" href="htm/Home.htm">Continue</a>
+</td>
+<!--начало нижнего таба-->
+<table class="<!--endTable-->" width="91%" height="5%" align="center" cellpadding="0" cellspacing="0">
+<tr>
+<td>
+<p class="hh2">Telegram Channels:</p>
+</td>
+</tr>
+<tr>
+<td class="visend"><a class="linkds" href="https://t.me/MistProjectwin" target="_blank"> Telegram Channel </a> || <a class="linkds" href="https://t.me/MistProject_win" target="_blank"> Software News [Demonstration]</a> || <a class="linkds" href="https://leit.link/BFPb" target="_blank"> Public Telegram Chat</a></td>
+</tr>
+<td>
+<p class="hh2">Developer Team:</p>
+</td>
+</tr>
+<tr>
+<td class="visend"><a class="linkds" href="https://t.me/Joberman4ik" target="_blank"> Joberman4ik [Owner] </a> || <a class="linkds" href="https://t.me/JUSTIBEST" target="_blank"> JUSTI [Coder, Support]</a> || <a class="linkds" href="https://t.me/PMT57" target="_blank"> 0xFoxy [Coder, Support]</a></td>
+</tr>
+<tr>
+<td class="visend"><a class="linkds" href="https://t.me/PMT57" target="_blank"> User5577 [Coder] </a> || <a class="linkds" href="https://t.me/PMT57" target="_blank"> Hellboy [Coder] </a> || <a class="linkds" href="https://t.me/sdnshina_real" target="_blank"> SDNSHINA [Coder]</a></td>
+</tr>
+</table>
+<!--окончание таба-->
 </tr>
 </table>
 </td>
