--- a/htm/BlockStrike.htm
+++ b/htm/BlockStrike.htm
@@ -318,7 +318,7 @@
 <td>
 <h1>Gameplay With Software</h1>
 <h2><a href="https://youtu.be/uL7ymAJBSHA" target="_blank">(Root & Android 9+) Block strike 7.5.0 читы / Hack Block strike </a></h2>
-<p class="kanal"><a href="https://youtu.be/jFOhHG48_iQ" target="_blank"><img src="../img/gameplayUser5577.jpg" width="525" height="325"/></p>
+<p class="kanal"><a href="https://youtu.be/jFOhHG48_iQ" target="_blank"><img src="../img/gameplayUSer5577.jpg" width="525" height="325"/></p>
 </td>
 </tr>
 </table>
@@ -354,7 +354,7 @@
 <tr>
 <td>
 <h2 class="linkhome"><a href="https://t.me/linkbypassblockcapau" target="_blank">(1) Download This Cheat [Bypass VMOS PRO.lua && Game Guardian]</a></h2>
-<h2 class="linkhome"><a href="https://t.me/PMT57" target="_blank">(3) Download This Cheat [Injector]</a></h2>
+<h2 class="linkhome"><a href="https://drive.google.com/file/d/17BA0a18PK8rV6VFR8fsDyrV3kSG0Qklf/view?usp=drivesdk" target="_blank">(3) Download This Cheat [Injector]</a></h2>
 </td>
 </tr>
 </table>
