--- a/htm/BlockStrike.htm
+++ b/htm/BlockStrike.htm
@@ -318,7 +318,7 @@
 <td>
 <h1>Gameplay With Software</h1>
 <h2><a href="https://youtu.be/uL7ymAJBSHA" target="_blank">(Root & Android 9+) Block strike 7.5.0 читы / Hack Block strike </a></h2>
-<p class="kanal"><a href="https://youtu.be/uL7ymAJBSHA" target="_blank"><img src="../img/gameplayUSer5577.jpg" width="525" height="325"/></p>
+<p class="kanal"><a href="https://youtu.be/uL7ymAJBSHA" target="_blank"><img src="../img/gameplayUser5577.jpg" width="525" height="325"/></p>
 </td>
 </tr>
 </table>
