--- a/htm/ChickenGun.htm
+++ b/htm/ChickenGun.htm
@@ -31,7 +31,7 @@ Functions in Cheat
 <!--status-plus-->
 <p class="status-minus">Status: In Development</p>
 <p class="text">
-Funcional: 
+Functions: 
 </p>
 <p class="text">
 -: 
