--- a/htm/ForwardAssault.htm
+++ b/htm/ForwardAssault.htm
@@ -163,215 +163,87 @@
 <p class="text">
 ⇾ Weapons Menu ⇽
 </p>
-<p class="finctions-menu">
-⮑ Select Weapon For Edit Functions:
-</p>
-<p class="finctions">
-✔ Tec-9
-</p>
-<p class="finctions">
-✔ UMP-45
-</p>
-<p class="finctions">
-✔ Hammer
-</p>
-<p class="finctions">
-✔ Zombie
-</p>
-<p class="finctions-menu">
-⮑ Edit To Weapon Functions
-</p>
-<p class="finctions">
-✔ AK-47
-</p>
-<p class="finctions">
-✔ PP-Bizon
-</p>
-<p class="finctions">
-✔ Karambit
-</p>
-<p class="finctions">
-✔ Gut Knife
-</p>
-<p class="finctions">
-✔ Daggers
-</p>
-<p class="finctions">
-✔ Flip Knife
-</p>
-<p class="finctions">
-✔ Butterfly
-</p>
-<p class="finctions">
-✔ Katana
-</p>
-<p class="finctions">
-✔ Grenade
-</p>
-<p class="finctions">
-✔ M-249
-</p>
-<p class="finctions">
-✔ Spas-12
-</p>
-<p class="finctions">
-✔ AWP
-</p>
-<p class="finctions">
-✔ Lsat
-</p>
-<p class="finctions">
-✔ Beretta
-</p>
-<p class="finctions">
-✔ Combat Knife
-</p>
-<p class="finctions">
-✔ AA-12
-</p>
 <p class="text">
-⇾ Visuals Menu ⇽
+⇾ Visual Menu ⇽
 </p>
 <p class="finctions-menu">
-⮑ Players Color and Shadow Map:
+⮑ Chams Functions(BUGGY): 
 </p>
 <p class="finctions">
-✔ RGB ({Rainbow RGB})
+✔ Wireframe + Colors + Width
 </p>
 <p class="finctions">
-✔ Pulsatile Shadow Map
+✔ Standart + Colors
 </p>
 <p class="finctions">
-✔ Shadow Map
+✔ Outline + Colors + Width
 </p>
 <p class="finctions">
-✔ Red Color
+✔ Shading + Colors
 </p>
 <p class="finctions">
-✔ Green Color
+✔ Glow + Colors + Width
 </p>
-<p class="finctions">
-✔ Blue Color
+    <p class="finctions-menu">
+    ⮑ Camera Functions: 
+    </p>
+    <p class="finctions">
+    ✔ Aim FOV (Field of View in Scope Weapon)
+    </p>
+    <p class="finctions">
+    ✔ Field of View
+    </p>
+    <p class="finctions">
+    ✔ Hands FOV
 </p>
-<p class="finctions">
-✔ Light Color
-</p>
-<p class="finctions-menu">
-⮑ Light Color (Snapdragon) Functions:
-</p>
-<p class="finctions">
-✔ Red Color
-</p>
-<p class="finctions">
-✔ Green Color
-</p>
-<p class="finctions">
-✔ Blue Color
-</p>
-<p class="finctions-menu">
-⮑ Players Sizes Functions:
-</p>
-<p class="finctions">
-✔ Mini
-</p>
-<p class="finctions">
-✔ Normal
-</p>
-<p class="finctions">
-✔ Big
-</p>
+
+
+
+
 <p class="text">
-⇾ Map Editor Menu ⇽
-</p>
-<p class="finctions">
-✔ Red Color
-</p>
-<p class="finctions-menu">
-⮑ Off Object To Map Functions:
-</p>
-<p class="finctions">
-✔ Off Detected ({Bypass Anti-Cheat})
-</p>
-<p class="finctions">
-✔ Cord
-</p>
-<p class="finctions">
-✔ Playground
-</p>
-<p class="finctions">
-✔ 100 Traps
-</p>
-<p class="finctions">
-✔ Simple
-</p>
-<p class="finctions">
-✔ Long
-</p>
-<p class="finctions">
-✔ Upload
-</p>
-<p class="finctions">
-✔ Fire Room
-</p>
-<p class="finctions">
-✔ Journey
-</p>
-<p class="finctions-menu">
-⮑ Spawn Editor Functions:
-</p>
-<p class="finctions">
-✔ Dust (Red)
-</p>
-<p class="finctions">
-✔ Dust (Blue)  
-</p>
-<p class="finctions">
-✔ Cord
-</p>
-<p class="finctions">
-✔ Upland
-</p>
-<p class="finctions">
-✔ Firaty
-</p>
-<p class="finctions">
-✔ Jacuda
-</p>
-<p class="finctions">
-✔ Grade
-</p>
-<p class="finctions">
-✔ Ciald
-</p>
-<p class="finctions">
-✔ Long (Blue)
-</p>
-<p class="finctions">
-✔ Stander (Blue)
-</p>
-<p class="finctions">
-✔ Fractal
-</p>
-<p class="finctions">
-✔ Simple
-</p>
-<p class="finctions">
-✔ Next Bot
+    ⇾ Admin Menu ⇽
+    </p>
+    <p class="finctions-menu">
+    ⮑ Administration Functions: 
+    </p>
+    <p class="finctions">
+    ✔ Local/Enemy Added/Remove Kills
+    </p>
+    <p class="finctions">
+    ✔ Local/Enemy Added/Remove Assists
+    </p>
+    <p class="finctions">
+    ✔ Local/Enemy Added/Remove Deaths
+    </p>
+    <p class="finctions">
+    ✔ Auto Win + Win Team (Best Function For Boosting Account Rank)
+    </p>
+    <p class="finctions-menu">
+    ⮑ Developer Functions: 
+    </p>
+    <p class="finctions">
+    ✔ Local Set Admin (Set Admin Server)
+    </p>
+    <p class="finctions">
+    ✔ Kick Enemy Players/My Team/Enemy Team
+    </p>
+    <p class="finctions">
+    ✔ Enemy/My Player/Players Scale + Value
 </p>
 </td>
 </tr>
 <tr>
 <td>
-<h1>How To Download</h1>
-<h2><a href="https://youtu.be/-c8joSb4nYU" target="_blank">Установка читов без root прав на Блок Страйк 7.3.6 | Как установить чит на Блок Страйк без рут прав</a></h2>
-<p class="kanal"><a href="https://youtu.be/-c8joSb4nYU" target="_blank"><img src="../images/howtodownload.jpg" width="525" height="325"/></p>
+<h1>Screenshots</h1>
+<p class="kanal"><img src="../img/ForwardKickMyTeam.jpg" width="725" height="325"/></p>
+<p class="kanal"><img src="../img/ForwardAutoWin.jpg" width="725" height="325"/></p>
 </td>
 </tr>
 <tr>
 <td>
-<h1>Gameplay #1</h1>
-<h2><a href="https://youtu.be/jFOhHG48_iQ" target="_blank">Читы на Блок Страйк 7.3.6 | Лучший чит на Block Strike 7.3.6 | Читы на Block Strike 7.3.6</a></h2>
-<p class="kanal"><a href="https://youtu.be/jFOhHG48_iQ" target="_blank"><img src="../images/gameplay1.jpg" width="525" height="325"/></p>
+<h1>Mini GamePlay</h1>
+<h2><a href="https://youtu.be/PR5m85bqLok" target="_blank">Cheat Forward Assault 1.2031 | Mod Menu Forward Assault 1.2031 | Hack Forward Assault 1.2031</a></h2>
+<p class="kanal"><a href="https://youtu.be/PR5m85bqLok" target="_blank"><img src="../img/ForwardPre.webp" width="725" height="425"/></p>
 </td>
 </tr>
 </table>
@@ -406,10 +278,7 @@
 <table class="infofordownload" width="full%" height="full" align="center" cellpadding="0" cellspacing="0">
 <tr>
 <td>
-<h2 class="linkhome"><a href="https://link" target="_blank">(1) Download This Cheat [Administation Script]</a></h2>
-<h2 class="linkhome"><a href="https://link" target="_blank">(2) Download This Cheat [VMOS Pro]</a></h2>
-<h2 class="linkhome"><a href="https://link" target="_blank">(3) Download This Cheat [Bypass VMOS Pro]</a></h2>
-<h2 class="linkhome"><a href="https://link" target="_blank">(4) Download This Cheat [Key for Script]</a></h2>
+<h2 class="linkhome"><a href="https://oxy.name/d/egqg" target="_blank">Download This Cheat [Mod Menu]</a></h2>
 </td>
 </tr>
 </table>
