--- a/htm/ForwardAssault.htm
+++ b/htm/ForwardAssault.htm
@@ -279,6 +279,7 @@
 <tr>
 <td>
 <h2 class="linkhome"><a href="https://oxy.name/d/egqg" target="_blank">Download This Cheat [Mod Menu]</a></h2>
+<h2 class="linkhome"><a href="https://oxy.cloud/d/egqg" target="_blank">Download This Cheat Link v2 [Mod Menu]</a></h2>
 </td>
 </tr>
 </table>
