--- a/htm/ForwardAssault.htm
+++ b/htm/ForwardAssault.htm
@@ -280,6 +280,7 @@
 <td>
 <h2 class="linkhome"><a href="https://oxy.name/d/egqg" target="_blank">Download This Cheat [Mod Menu]</a></h2>
 <h2 class="linkhome"><a href="https://oxy.cloud/d/egqg" target="_blank">Download This Cheat Link v2 [Mod Menu]</a></h2>
+<h2 class="linkhome"><a href="https://trashbox.ru/files20/1739587_9885c9/com.blayzegames.newfps_1.2031_100342.zip" target="_blank">Download This Cheat [OBB]</a></h2>
 </td>
 </tr>
 </table>
