--- a/htm/BlockStrike.htm
+++ b/htm/BlockStrike.htm
@@ -26,7 +26,7 @@
 <td>
 <h2>🢥 Best Free Software [INJECTOR] 🢦</h2>
 <p class="hh3">
-⭐Functions in Software⭐
+    ↯ Functions in Software ↯ 
 </p>
 <!--status-plus or status-minus
 ✅
@@ -45,7 +45,7 @@
 ⇾ All Functions Menu ⇽
 </p>
 <p class="finctions-menu">
-⮑ Legit Functions:
+⤹ Legit Functions:
 </p>
 <p class="finctions">
 ✔ Off Detected ({Bypass Anti-Cheat})
@@ -69,7 +69,7 @@
 ✔ Wallhack (Beta)
 </p>
 <p class="finctions-menu">
-⮑ Rage Functions: 
+⤹ Rage Functions: 
 </p>
 <p class="finctions">
 ✔ God Mode [Damage]
@@ -111,7 +111,7 @@
 ⇾ Weapons Menu ⇽
 </p>
 <p class="finctions-menu">
-⮑ Select Weapon For Edit Functions:
+⤹ Select Weapon For Edit Functions:
 </p>
 <p class="finctions">
 ✔ Tec-9
@@ -126,7 +126,7 @@
 ✔ Zombie
 </p>
 <p class="finctions-menu">
-⮑ Edit To Weapon Functions
+⤹ Edit To Weapon Functions
 </p>
 <p class="finctions">
 ✔ AK-47
@@ -180,7 +180,7 @@
 ⇾ Visuals Menu ⇽
 </p>
 <p class="finctions-menu">
-⮑ Players Color and Shadow Map:
+⤹ Players Color and Shadow Map:
 </p>
 <p class="finctions">
 ✔ RGB ({Rainbow RGB})
@@ -204,7 +204,7 @@
 ✔ Light Color
 </p>
 <p class="finctions-menu">
-⮑ Light Color (Snapdragon) Functions:
+    ⤹ Light Color (Snapdragon) Functions:
 </p>
 <p class="finctions">
 ✔ Red Color
@@ -216,7 +216,7 @@
 ✔ Blue Color
 </p>
 <p class="finctions-menu">
-⮑ Players Sizes Functions:
+    ⤹ Players Sizes Functions:
 </p>
 <p class="finctions">
 ✔ Mini
@@ -234,7 +234,7 @@
 ✔ Red Color
 </p>
 <p class="finctions-menu">
-⮑ Off Object To Map Functions:
+    ⤹ Off Object To Map Functions:
 </p>
 <p class="finctions">
 ✔ Off Detected ({Bypass Anti-Cheat})
@@ -264,7 +264,7 @@
 ✔ Journey
 </p>
 <p class="finctions-menu">
-⮑ Spawn Editor Functions:
+    ⤹ Spawn Editor Functions:
 </p>
 <p class="finctions">
 ✔ Dust (Red)
