--- a/htm/ChickenGun.htm
+++ b/htm/ChickenGun.htm
@@ -24,17 +24,161 @@
 <table class="VnytTable" width="85%" height="295px" align="center" cellpadding="0" cellspacing="0">
 <tr>
 <td>
-<h2>Cheat For Chicken Gun</h2>
+<h2>🢥 Best Free Software [MOD MENU] 🢦</h2>
 <p class="hh3">
-Functions in Cheat
+    ↯ Functions in Software ↯
 </p>
 <!--status-plus-->
-<p class="status-minus">Status: In Development</p>
-<p class="text">
-Functions: 
+<p class="status-plus">✅ Status: Software Works in Chicken Gun on version 3.1.02 - 3.1.04</p>
+<!--<p class="text">
+⇾ Player Menu ⇽
+</p>-->
+<p class="finctions-menu">
+    ⤹ Player Functions:
 </p>
-<p class="text">
--: 
+<p class="finctions">
+✔ God Mode
+</p>
+<p class="finctions">
+✔ God Mode v2
+</p>
+<p class="finctions">
+✔ Infinity Grenades(in Lobby)
+</p>
+<p class="finctions">
+✔ Damage++
+</p>
+<p class="finctions">
+✔ Infinity Ammo
+</p>
+<p class="finctions">
+✔ Speed Hack
+</p>
+<p class="finctions">
+✔ Infinity Jump
+</p>
+<p class="finctions">
+✔ Bullet Type Changer
+</p>
+<p class="finctions-menu">
+⤹ Other Functions: 
+</p>
+<p class="finctions">
+✔ Anti-Kick
+</p>
+<p class="finctions">
+✔ Car Boosting
+</p>
+<p class="finctions">
+✔ Jetpack For Everyone
+</p>
+<p class="finctions">
+    ✔ Farm(you need to turn on the transmission for 5 minutes and then you will add coins, level)
+</p>
+<p class="finctions">
+✔ Ultra Remove Objects
+</p>
+<p class="finctions">
+✔ Car Driver Hack(you can get into the car even if someone is driving)
+</p>
+<p class="finctions">
+✔ God Mode Car
+</p>
+<p class="finctions">
+✔ Off Limit Car Speed
+</p>
+<p class="finctions">
+✔ Unlock All
+</p>
+<p class="finctions-menu">
+⤹ Object Spawner Functions: 
+</p>
+<p class="finctions">
+✔ Create Objects
+</p>
+<p class="finctions">
+✔ Clone Player
+</p>
+<p class="finctions">
+✔ Destroy Objects[Data]
+</p>
+<p class="finctions-menu">
+⤹ Game && Server Functions: 
+</p>
+<p class="finctions">
+✔ Hide NickName in Chat
+</p>
+<p class="finctions">
+✔ Chat Spam
+</p>
+<p class="finctions">
+✔ Crash All
+</p>
+<p class="finctions">
+✔ Everyone Shooting
+</p>
+<p class="finctions">
+✔ Spam Grenades Everyone
+</p>
+<p class="finctions">
+✔ Time Scale
+</p>
+<p class="finctions">
+✔ Monsters Speed
+</p>
+<p class="finctions">
+✔ God Mode Monsters
+</p>
+<p class="finctions">
+✔ Respawn All(Buggy)
+</p>
+<p class="finctions-menu">
+⤹ Visual Functions: 
+</p>
+<p class="finctions">
+✔ 2D Mode
+</p>
+<p class="finctions">
+✔ FOV(in lobby)
+</p>
+<p class="finctions">
+✔ Black Sky
+</p>
+<p class="finctions">
+✔ Wall Chams
+</p>
+<p class="finctions">
+✔ Color Chams
+</p>
+<p class="finctions">
+✔ Wireframe Chams
+</p>
+<p class="finctions">
+✔ Glow Chams
+</p>
+<p class="finctions">
+✔ Outline Chams
+</p>
+<p class="finctions">
+✔ Alpha Chams
+</p>
+<p class="finctions">
+✔ Rainbow Mode v1
+</p>
+<p class="finctions">
+✔ Rainbow Mode v2
+</p>
+<p class="finctions">
+✔ Cars Position x/y/z
+</p>
+<p class="finctions">
+✔ Cars Size x/y/z
+</p>
+<p class="finctions">
+✔ Monsters Position x/y/z
+</p>
+<p class="finctions">
+✔ Monsters Size x/y/z
 </p>
 </td>
 </tr>
@@ -48,9 +192,9 @@ Functions:
 </tr>
 <tr>
 <td>-->
-<h1>Gameplay #1</h1>
-<h2><a href="https://youtu.be/--" target="_blank"> </a></h2>
-<p class="kanal"><a href="https://youtu.be/ --" target="_blank"><img src="../img/soon.jpg" width="525" height="325"/></p>
+<h1>GamePlay</h1>
+<h2><a href="https://youtu.be/oswlJP8YDGE" target="_blank">MOD MENU CHICKEN GUN 3.1.02 - 3.1.04 BY HELLBOY</a></h2>
+<p class="kanal"><a href="https://youtu.be/oswlJP8YDGE" target="_blank"><img src="../img/ChickenPre.jpg" width="625" height="325"/></p>
 </td>
 </tr>
 </table>
@@ -88,10 +232,8 @@ Functions:
 <table class="infofordownload" width="full%" height="full" align="center" cellpadding="0" cellspacing="0">
 <tr>
 <td>
-<h2 class="linkhome"><a href="https://link" target="_blank"> </a></h2>
-<h2 class="linkhome"><a href="https://link" target="_blank"> </a></h2>
-<h2 class="linkhome"><a href="https://link" target="_blank"> </a></h2>
-<h2 class="linkhome"><a href="https://link" target="_blank"> </a></h2>
+<h2 class="linkhome"><a href="https://leit.link/hMTb" target="_blank">Download This Cheat [Mod Menu</a></h2>
+<h2 class="linkhome"><a href="https://discord.gg/QdwJWAu2YY" target="_blank">Join to Discord Server by HellBoy</a></h2>
 </td>
 </tr>
 </table>
