--- a/htm/ForwardAssault.htm
+++ b/htm/ForwardAssault.htm
@@ -26,7 +26,7 @@
 <td>
 <h2>🢥 Best Free Software [MOD MENU] 🢦</h2>
 <p class="hh3">
-⭐Functions in Software⭐
+    ↯ Functions in Software ↯ 
 </p>
 <!--status-plus or status-minus
 ✅
@@ -39,7 +39,7 @@
 ⇾ Main Menu ⇽
 </p>
 <p class="finctions-menu">
-⮑ Controller Functions:
+    ⤹ Controller Functions:
 </p>
 <p class="finctions">
 ✔ No Recoil
@@ -69,7 +69,7 @@
 ✔ No Hit Col (Landing Without Damage)
 </p>
 <p class="finctions-menu">
-⮑ Support Aim Functions: 
+    ⤹ Support Aim Functions: 
 </p>
 <p class="finctions">
 ✔ Hit Boxes Aim (Add Players HitBoxes Head Size)
@@ -78,7 +78,7 @@
 ✔ Trigger Bot (Trigger Auto Shoot on Players)
 </p>
 <p class="finctions-menu">
-⮑ Select Weapon Functions: 
+    ⤹ Select Weapon Functions: 
 </p>
 <p class="finctions">
 ✔ Set Weapon (Select Weapon)
@@ -87,7 +87,7 @@
 ✔ Weapon ID
 </p>
 <p class="finctions-menu">
-⮑ Select Gloves Functions: 
+    ⤹ Select Gloves Functions: 
 </p>
 <p class="finctions">
 ✔ Gloves ID
@@ -96,7 +96,7 @@
 ⇾ Fantastic Menu ⇽
 </p>
 <p class="finctions-menu">
-⮑ Shooting Functions: 
+    ⤹ Shooting Functions: 
 </p>
 <p class="finctions">
 ✔ Fire Rate
@@ -111,7 +111,7 @@
 ✔ Ammo Type [Kick && Ban] (Shooting Grenades or Bullets)
 </p>
 <p class="finctions-menu">
-⮑ Select Custom Team Functions: 
+    ⤹ Select Custom Team Functions: 
 </p>
 <p class="finctions">
 ✔ Set Team (Select Counter-Terrorist or Terrorist Team)
@@ -120,7 +120,7 @@
 ✔ Fast Change Team (Auto Fast Change my Team CT,T,S)
 </p>
 <p class="finctions-menu">
-⮑ Bomb Functions: 
+    ⤹ Bomb Functions: 
 </p>
 <p class="finctions">
 ✔ Plant Anywhere
@@ -138,7 +138,7 @@
 ✔ Fast Defusing [Kick is Possible For Abuse]
 </p>
 <p class="finctions-menu">
-⮑ Movement Functions:
+    ⤹ Movement Functions:
 </p>
 <p class="finctions">
 ✔ No Move [Kick is Possible For Abuse]
@@ -160,14 +160,11 @@
 <p class="finctions">
 ✔ Auto Strafe (Slight Jump Turn)
 </p>
-
-
-
 <p class="text">
 ⇾ Visual Menu ⇽
 </p>
 <p class="finctions-menu">
-⮑ Chams Functions(BUGGY): 
+    ⤹ Chams Functions(BUGGY): 
 </p>
 <p class="finctions">
 ✔ Wireframe + Colors + Width
@@ -185,7 +182,7 @@
 ✔ Glow + Colors + Width
 </p>
     <p class="finctions-menu">
-    ⮑ Camera Functions: 
+    ⤹ Camera Functions: 
     </p>
     <p class="finctions">
     ✔ Aim FOV (Field of View in Scope Weapon)
@@ -204,7 +201,7 @@
     ⇾ Admin Menu ⇽
     </p>
     <p class="finctions-menu">
-    ⮑ Administration Functions: 
+    ⤹ Administration Functions: 
     </p>
     <p class="finctions">
     ✔ Local/Enemy Added/Remove Kills
@@ -219,7 +216,7 @@
     ✔ Auto Win + Win Team (Best Function For Boosting Account Rank)
     </p>
     <p class="finctions-menu">
-    ⮑ Developer Functions: 
+    ⤹ Developer Functions: 
     </p>
     <p class="finctions">
     ✔ Local Set Admin (Set Admin Server)
